Lower ingress equality check for robustness, make ENV optional, update version to 0.1.3

--- a/operator/params.yaml
+++ b/operator/params.yaml
@@ -32,6 +32,7 @@ parameters:
     description: "Environment variables for the application container"
     displayName: "Environment Variables"
     type: map
+    required: False
   - name: USER_LABELS
     description: "Additional labels for identifying deployment resources. Not used for selector matches."
     displayName: "Additional Labels"
